change hostname
