# app/security.go
@@ -32,6 +32,24 @@ func NewBasicAuthSecurity() *goa.BasicAuthSecurity {
 	return &def
 }
 
+// UseJWTMiddleware mounts the jwt auth middleware onto the service.
+func UseJWTMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("jwt"), middleware)
+}
+
+// NewJWTSecurity creates a jwt security definition.
+func NewJWTSecurity() *goa.JWTSecurity {
+	def := goa.JWTSecurity{
+		In:       goa.LocHeader,
+		Name:     "Authorization",
+		TokenURL: "",
+		Scopes: map[string]string{
+			"api:access": "API access",
+		},
+	}
+	return &def
+}
+
 // handleSecurity creates a handler that runs the auth middleware for the security scheme.
 func handleSecurity(schemeName string, h goa.Handler, scopes ...string) goa.Handler {
 	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
