# public/swagger/swagger.yaml
@@ -45,7 +45,7 @@ definitions:
     example:
       accountID: 1
       body: this is chat message
-      postDate: 1978-10-30T20:16:40+09:00
+      postDate: 1973-10-13T08:06:32+09:00
     properties:
       accountID:
         example: 1
@@ -58,7 +58,7 @@ definitions:
         type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 1978-10-30T20:16:40+09:00
+        example: 1973-10-13T08:06:32+09:00
         format: date-time
         type: string
     required:
@@ -73,13 +73,13 @@ definitions:
     example:
     - accountID: 1
       body: this is chat message
-      postDate: 1978-10-30T20:16:40+09:00
+      postDate: 1973-10-13T08:06:32+09:00
     - accountID: 1
       body: this is chat message
-      postDate: 1978-10-30T20:16:40+09:00
+      postDate: 1973-10-13T08:06:32+09:00
     - accountID: 1
       body: this is chat message
-      postDate: 1978-10-30T20:16:40+09:00
+      postDate: 1973-10-13T08:06:32+09:00
     items:
       $ref: '#/definitions/Message'
     title: 'Mediatype identifier: application/vnd.message+json; type=collection; view=default'
@@ -88,7 +88,7 @@ definitions:
     example:
       accountID: 1
       body: this is chat message
-      postDate: 2008-11-20T01:54:58+09:00
+      postDate: 2011-12-01T23:40:08+09:00
     properties:
       accountID:
         example: 1
@@ -101,7 +101,7 @@ definitions:
         type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 2008-11-20T01:54:58+09:00
+        example: 2011-12-01T23:40:08+09:00
         format: date-time
         type: string
     required:
@@ -113,14 +113,14 @@ definitions:
   Room:
     description: A room (default view)
     example:
-      created: 1972-12-18T13:15:32+09:00
+      created: 1995-06-04T18:46:04+09:00
       description: room description
-      id: 4.1818056e+18
+      id: 7.6309603e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1972-12-18T13:15:32+09:00
+        example: 1995-06-04T18:46:04+09:00
         format: date-time
         type: string
       description:
@@ -130,7 +130,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 4.1818056e+18
+        example: 7.6309603e+18
         format: int64
         type: integer
       name:
@@ -145,13 +145,13 @@ definitions:
   RoomCollection:
     description: RoomCollection is the media type for an array of Room (default view)
     example:
-    - created: 1972-12-18T13:15:32+09:00
+    - created: 1995-06-04T18:46:04+09:00
       description: room description
-      id: 4.1818056e+18
+      id: 7.6309603e+18
       name: room001
-    - created: 1972-12-18T13:15:32+09:00
+    - created: 1995-06-04T18:46:04+09:00
       description: room description
-      id: 4.1818056e+18
+      id: 7.6309603e+18
       name: room001
     items:
       $ref: '#/definitions/Room'
@@ -159,14 +159,14 @@ definitions:
     type: array
   RoomPayload:
     example:
-      created: 1973-10-13T08:06:32+09:00
+      created: 2006-10-04T15:19:48+09:00
       description: room description
-      id: 5.8591655e+18
+      id: 2.5238995e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1973-10-13T08:06:32+09:00
+        example: 2006-10-04T15:19:48+09:00
         format: date-time
         type: string
       description:
@@ -176,7 +176,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 5.8591655e+18
+        example: 2.5238995e+18
         format: int64
         type: integer
       name:
@@ -340,7 +340,11 @@ paths:
       tags:
       - room
     post:
-      description: Create new Room
+      description: |-
+        Create new Room
+
+        Required security scopes:
+          * `api:access`
       operationId: room#post
       parameters:
       - in: body
@@ -361,7 +365,8 @@ paths:
       schemes:
       - http
       security:
-      - basic_auth: []
+      - jwt:
+        - api:access
       summary: post room
       tags:
       - room
@@ -425,7 +430,11 @@ paths:
       tags:
       - message
     post:
-      description: Create new message
+      description: |-
+        Create new message
+
+        Required security scopes:
+          * `api:access`
       operationId: message#post
       parameters:
       - in: path
@@ -450,7 +459,8 @@ paths:
       schemes:
       - http
       security:
-      - basic_auth: []
+      - jwt:
+        - api:access
       summary: post message
       tags:
       - message
@@ -468,8 +478,8 @@ paths:
         required: true
         type: integer
       produces:
-      - application/vnd.message+json
       - application/vnd.goa.error
+      - application/vnd.message+json
       responses:
         "200":
           description: OK
@@ -551,4 +561,13 @@ schemes:
 securityDefinitions:
   basic_auth:
     type: basic
+  jwt:
+    description: |2-
+
+
+      **Security Scopes**:
+        * `api:access`: API access
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
